hard-gists/1720032/run.log
=== Docker Run Log for 1720032 ===
Started at: Mi 29. Okt 12:24:59 CET 2025

[2025-10-29 12:24:59] START: Running container for 1720032
[2025-10-29 12:25:00] SUCCESS: Container f636796bd7f94bca5d304bf5eaef194d1a32974fa85a270529c782c7c175cd1c started for 1720032
=== Container logs for 1720032 ===
  File "/snippet.py", line 75
    print ' retrying'
    ^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 1720032 ===
[2025-10-29 12:25:02] INFO: Container f636796bd7f94bca5d304bf5eaef194d1a32974fa85a270529c782c7c175cd1c has stopped
